# nightride-fm-tui

./: .gitignore  Cargo.toml  README.md  install.sh  nightride.desktop
src/: main.rs
