[package]
name = "nightride"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.20.1" }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
home = "0.5.4"
